--- a/board.css
+++ b/board.css
@@ -1,9 +1,52 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Proza Libre', sans-serif;
+}
+
 img {
     object-position: top 0px right 0px;
 }
 
 .top-menu {
     display: flex;
+}
+
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 25px;  /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+  
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+  
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+  
+    /* Support for IE. */
+    font-feature-settings: 'liga';
+}
+
+button { 
+    width: 50px;
+    height: 50px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    color: white;
+    background-color: #FF7A00;
+    align-items: center;
 }
 
 .board {
@@ -15,8 +58,12 @@ img {
     height: 90vh;
     padding: 4px;
     position: relative;
+    border-right: 1px solid #FF7A00;
 }
 
+#terceiro-quadrante {
+    border-right: 0;
+}
 
 p {
     color: #FF7A00;
@@ -41,11 +88,9 @@ p {
     bottom: 0;
 }
 
-hr {
-    background-color: #FF7A00;
-    position: absolute;
-    right: 0;
-    border: 0;
+#fechar {
+    right: 10px;
+    top: 10px;
 }
 
 .arrow {
@@ -83,20 +128,6 @@ hr {
     height: 50rem;
 }
 
-.close-button {
-    float: right;
-    width: 1.5rem;
-    line-height: 1.5rem;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 0.25rem;
-    background-color: lightgray;
-}
-
-.close-button:hover {
-    background-color: darkgray;
-}
-
 .show-modal {
     opacity: 1;
     visibility: visible;
@@ -104,12 +135,6 @@ hr {
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Proza Libre', sans-serif;
-}
 .speech {
     width: -webkit-fill-available;
     height: -webkit-fill-available;
@@ -132,19 +157,3 @@ hr {
     padding: 1rem;
 }
 
-.fas {
-    font-weight: 200;
-    font-size: 20px;
-    color: white;
-    min-width: 40px;
-}
-
-button { 
-    width: 50px;
-    height: 50px;
-    border: none;
-    cursor: pointer;
-    border-radius: 50%;
-    color: white;
-    background-color: #FF7A00;
-}
